--- a/src/db_setup.ipynb
+++ b/src/db_setup.ipynb
@@ -8,18 +8,17 @@
    "source": [
     "# This file was created to generate all the tables of the database\n",
     "import pandas as pd\n",
-    "from sqlalchemy import create_engine\n",
+    "import psycopg2\n",
+    "import os\n",
     "\n",
-    "# Configuration PostgreSQL\n",
-    "DB_USER = \"postgres\"\n",
-    "DB_PASSWORD = \"youx123\"\n",
-    "DB_HOST = \"localhost\"\n",
-    "DB_PORT = \"5432\"\n",
-    "DB_NAME = \"rec_db\"\n",
     "\n",
     "# Connect to DB\n",
-    "engine = create_engine(f\"postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}\", pool_recycle=3600)\n",
-    "\n",
+    "engine = psycopg2.connect(\n",
+    "        host=\"localhost\",  # Usually 'localhost' or the actual database server address\n",
+    "        database=\"rec_db\",  # The name of your PostgreSQL database\n",
+    "        user=os.getenv(\"DB_USER\"),  # Your PostgreSQL username\n",
+    "        password=os.getenv(\"DB_PASSWORD\")  # Your PostgreSQL password\n",
+    "    )\n",
     "# Replace by your db credentials and your paths\n",
     "\n",
     "print(\"1\")\n",
